--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -7,7 +7,7 @@
 
 
       <div class="row">
-        <button mat-raised-button type="submit" class="btn btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR</button>
+        <button mat-raised-button type="submit" class="btn btn1 btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
 
           <div class="col-md-12">
 
@@ -86,27 +86,29 @@
       <div class="modal-body">
         <form [formGroup]="menuForm">
 
-          <div class="form-row">
+         <!-- ... -->
 
-            <div class="form-group col-md-8">
-              <label for="inputState" class="select-gr text-center">Tipo Menu</label> <br>
-              <select id="inputState" class="example-full-width estilos" placeholder="Seleccione" formControlName="id_tipomenu" (Change)="getId_Tipomenu()">
-                <option selected *ngFor="let item of tipomenusss" [value]="item.id">{{item.tipo}}</option>
-              </select>
-            </div>
-            
+<div class="form-row">
+  <div class="form-group col-md-8">
+    <label for="inputState" class="select-gr text-center">Tipo Menu</label> <br>
+    <select id="inputState" class="example-full-width estilos" placeholder="Seleccione" formControlName="id_tipomenu" (Change)="getId_Tipomenu()">
+      <option selected disabled value="">Seleccione</option>
+      <option *ngFor="let item of tipomenusss" [value]="item.id">{{item.tipo}}</option>
+    </select>
+    <div *ngIf="menuForm.controls['id_tipomenu'].errors?.required && menuForm.controls['id_tipomenu'].touched" class="text-danger">Campo requerido</div>
+  </div>
+</div>
 
-          </div>
-          <div class="form-row">
+<div class="form-row">
+  <div class="form-group col-md-8">
+    <label for="inputState" class="select-gr">Descripción</label> <br>
+    <input class="example-full-width estilos" type="text" formControlName="descripcion">
+    <div *ngIf="menuForm.controls['descripcion'].errors?.required && menuForm.controls['descripcion'].touched" class="text-danger">Campo requerido</div>
+  </div>
+</div>
 
-            <div class="form-group col-md-8">
-              <label for="inputState" class="select-gr">Descripción</label> <br>
-                <input class="example-full-width estilos " type="text" formControlName="descripcion">
+<!-- ... -->
 
-          
-            </div>
-
-          </div>
 
 
           <input type="hidden" formControlName="funcion">
